[project]
name = "django-scrubber"
version = "4.2.0"
license = "MIT"
requires-python = ">=3.9"
description = "Data anonymizer for Django"
readme = "README.md"
keywords = [
    "django",
    "data protection",
    "scrubber",
    "scrub",
    "anonymize",
    "gdpr",
]
authors = [{ name = "RegioHelden GmbH", email = "opensource@regiohelden.de" }]
maintainers = [
    { name = "RegioHelden GmbH", email = "opensource@regiohelden.de" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = ["Faker>=20.0.0", "Django>=4.2,<6.0"]

[project.urls]
Homepage = "https://github.com/RegioHelden/django-scrubber"
Documentation = "https://github.com/RegioHelden/django-scrubber/blob/master/README.md"
Repository = "https://github.com/RegioHelden/django-scrubber.git"
Issues = "https://github.com/RegioHelden/django-scrubber/issues"
Changelog = "https://github.com/RegioHelden/django-scrubber/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_scrubber"]
include = ["LICENSE", "README.md", "CHANGELOG.md"]

[tool.hatch.build.targets.sdist]
packages = ["django_scrubber"]
include = ["LICENSE", "README.md", "CHANGELOG.md"]

[tool.ruff]
exclude = [
    ".cache",
    ".git",
    "__pycache",
    "docs",
    "migrations",
    "rh_django_shared",
    "src",
]
line-length = 119

[tool.ruff.lint]
dummy-variable-rgx = "_|dummy"
# See https://docs.astral.sh/ruff/rules/ for all supported rules
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90", # mccabe
    "COM", # flake8-commas
    "DJ",  # flake8-django
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle
    "ERA", # eradicate
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # isort
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # ruff-specific rules
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",   # pycodestyle
    "YTT", # flake8-2020
]

[tool.ruff.lint.pycodestyle]
max-line-length = 119

[tool.ruff.lint.mccabe]
max-complexity = 16

[tool.bumpversion]
current_version = "4.1.0"
tag = true
commit = true

[[tool.bumpversion.files]]
filename = "django_scrubber/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = ["*site-packages*", "*tests*", "*.tox*"]
show_missing = true
exclude_lines = ["raise NotImplementedError"]
